add the song title, lyric, and video

--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -12,7 +12,41 @@
 </head>
 
 <body>
+    <section>
+        <div>
+            <h1>Dream Lantern</h1>
+            <blockquote>
+                <p>Ah, if only our voices speak at night <br>
+                    Could ever reach the very edge of this world and the time<br>
+                    Instead of fading into air and dust<br>
+                    Then what will the words could ever be?<br>
+                    Farthest words from "probably"<br>
+                    Let's make a promise that will never fade<br>
+                    Let's say it together in count of three, oh<br>
+                    Ooh-oh-oh</p>
 
+                <p>Ah, I'm told that some part of every wish will be heard<br>
+                    But lately I've lost sight of the truth in those words<br>
+                    I can't even remember when I gave up believing<br>
+                    What could have been the reason?<br>
+                    Ah, the very moment that the rain will stop<br>
+                    In the place rainbow born and dies<br>
+                    And where the end of this life lies<br>
+                    I've always been insisting there was something that I've longing for</p>
+
+                <p>One day we'll reach to emotions unexplored, unprecedented<br>
+                    We'll high-five love we've yet to discover and give a kiss to time<br>
+                    The five dimensions keeps on teasing me<br>
+                    But I will keep on looking at you, dear<br>
+                    Let's make a sign for when we say "Nice to meet you" again<br>
+                    I'm on my way to you, chasing after your name</p>
+            </blockquote>
+            <iframe width="560" height="312" src="https://www.youtube.com/embed/jqKf8ZP-oag?si=5I5ZZvSVnc6PszfE"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 </body>
 
 </html>
