--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -45,6 +45,9 @@
                 I'm on my way to you, chasing after your name</p>
         </blockquote>
     </section>
+    <footer>
+        <p>RADWINPS</p>
+    </footer>
 </body>
 
 </html>
