--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -4,30 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="This is the HTML for Lab Two">
+    <meta name="description" content="This is the HTML for Assignment one">
     <title>Assignment One: What the font</title>
     <meta name="robots" content="noindex, nofollow">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch&family=Cormorant+Garamond&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Saira:ital,wght@0,500;1,500&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
+    <!-- Music Section -->
     <section class="music">
+        <!-- The title of the song -->
         <h1>Dream Lantern</h1>
+        <!-- Video -->
         <iframe width="640" height="387" src="https://www.youtube.com/embed/jqKf8ZP-oag?si=5I5ZZvSVnc6PszfE"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <!-- Lyric -->
         <blockquote cite="https://genius.com/Radwimps-dream-lantern-english-version-lyrics">
+            <!-- Verse 1 -->
             <p class="lyric">Ah, if only our voices speak at night <br>
                 Could ever reach the very edge of this world and the time<br>
                 Instead of fading into air and dust<br>
-                Then what will the words could ever be?<br>
+                Then what will the <span class="saira-medium">words</span> could ever be?<br>
                 Farthest words from "probably"<br>
-                Let's make a promise that will never fade<br>
+                Let's make a <span class="saira-medium">promise</span> that will never fade<br>
                 Let's say it together in count of three, oh<br>
-                Ooh-oh-oh</p>
-
+                <span class="saira-medium">Ooh-oh-oh</span>
+            </p>
+            <!-- Verse 2 -->
             <p class="lyric">Ah, I'm told that some part of every wish will be heard<br>
                 But lately I've lost sight of the truth in those words<br>
                 I can't even remember when I gave up believing<br>
@@ -36,15 +48,19 @@
                 In the place rainbow born and dies<br>
                 And where the end of this life lies<br>
                 I've always been insisting there was something that I've longing for</p>
-
-            <p class="lyric">One day we'll reach to emotions unexplored, unprecedented<br>
-                We'll high-five love we've yet to discover and give a kiss to time<br>
+            <!-- Verse 3 -->
+            <p class="lyric">One day we'll reach to <span class="saira-medium">emotions</span> unexplored,
+                unprecedented<br>
+                We'll high-five <span class="saira-medium">love</span> we've yet to discover and give a kiss to <span
+                    class="saira-medium">time</span><br>
                 The five dimensions keeps on teasing me<br>
                 But I will keep on looking at you, dear<br>
-                Let's make a sign for when we say "Nice to meet you" again<br>
+                Let's make a <span class="saira-medium">sign</span> for when we say <span class="saira-medium">"Nice to
+                    meet you"</span> again<br>
                 I'm on my way to you, chasing after your name</p>
         </blockquote>
     </section>
+    <!-- Footer -->
     <footer>
         <p>RADWINPS</p>
     </footer>
