changed a video area structure

--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -23,10 +23,14 @@
         <!-- The title of the song -->
         <h1>Dream Lantern</h1>
         <!-- Video -->
-        <iframe width="640" height="387" src="https://www.youtube.com/embed/jqKf8ZP-oag?si=5I5ZZvSVnc6PszfE"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div class="video">
+            <div class="video-wrapper">
+                <iframe src="https://www.youtube.com/embed/jqKf8ZP-oag?si=5I5ZZvSVnc6PszfE"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </div>
         <!-- Lyric -->
         <blockquote cite="https://genius.com/Radwimps-dream-lantern-english-version-lyrics">
             <!-- Verse 1 -->
