removed bad code following validation tools

--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -25,8 +25,7 @@
         <!-- Video -->
         <div class="video">
             <div class="video-wrapper">
-                <iframe src="https://www.youtube.com/embed/jqKf8ZP-oag?si=5I5ZZvSVnc6PszfE"
-                    title="YouTube video player" frameborder="0"
+                <iframe src="https://www.youtube.com/embed/jqKf8ZP-oag?si=5I5ZZvSVnc6PszfE" title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
