--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -33,6 +33,45 @@
     </section>
 
     <main>
+        <section>
+            <h2>Flavors</h2>
+            <div class="row">
+                <div class="zoom-in">
+                    <figure>
+                        <img src="./image/flavors/milk-chocolate.png" alt="">
+                        <div class="mask">
+                            <h3>Milk Chocolate</h3>
+                        </div>
+                    </figure>
+                </div>
+                <div class="zoom-in">
+                    <figure>
+                        <img src="./image/flavors/peanut.png" alt="">
+                        <div class="mask">
+                            <h3>Peanut</h3>
+                        </div>
+                    </figure>
+                </div>
+                <div class="zoom-in">
+                    <figure>
+                        <img src="./image/flavors/peanut-butter.png" alt="">
+                        <div class="mask">
+                            <h3>Peanut Butter</h3>
+                        </div>
+                    </figure>
+                </div>
+
+                <div class="zoom-in">
+                    <figure>
+                        <img src="./image/flavors/caramel.png" alt="">
+                        <div class="mask">
+                            <h3>Caramel</h3>
+                        </div>
+                    </figure>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer>
