add footer area

--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -75,6 +75,54 @@
     </main>
 
     <footer>
+        <!-- left area -->
+        <div>
+            <div>
+                <div><img src="./image/logo-main.svg" alt="company logo"></div>
+                <p>McLean, Virginia, USA</p>
+                <p>http://www.mars.com</p>
+            </div>
+        </div>
+        <!-- middle area -->
+        <section>
+            <h3>Manufacturing Facilities</h3>
+            <div class="facilities">
+                <div>
+                    <p>Hackettstown, New Jersey</p>
+                    <p>Albany, Georgia</p>
+                    <p>Burr Ridge, Illinois</p>
+                    <p>Minneapolis, Minnesota</p>
+                    <p>Chicago, Illinois</p>
+                    <p>Mattoon, Illinois</p>
+                    <p>Cleveland, Tennessee</p>
+                    <p>Chattanooga, Tennessee</p>
+                    <p>Columbia, South Carolina</p>
+                    <p>Columbus, Ohio</p>
+                </div>
+                <div>
+                    <p>Elizabethtown, Pennsylvania</p>
+                    <p>Greenville, Mississippi</p>
+                    <p>Greenville and Waco, Texas</p>
+                    <p>Henderson and Reno, Nevada</p>
+                    <p>Fort Smith, Arkansas</p>
+                    <p>Joplin, Missouri</p>
+                    <p>Kansas City, Missouri</p>
+                    <p>Miami, Oklahoma</p>
+                    <p>Galena, Kansas</p>
+                </div>
+            </div>
+        </section>
+        <!-- right area -->
+        <div>
+            <h3>Contact Form</h3>
+            <form action="#">
+                <input type="text" placeholder="Name">
+                <input type="text" placeholder="Email">
+                <textarea placeholder="Message" rows="4"></textarea>
+                <button type="submit">Submit</button>
+                <img src="./image/characters/purple_sm.png" alt="m&m's character:purple" id="purple" class="hidden">
+            </form>
+        </div>
     </footer>
 </body>
 
