add product area, images and js

--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -11,6 +11,10 @@
     <!-- fonts -->
     <!-- css -->
     <link rel="stylesheet" href="./css/style.css">
+    <!-- js/jQuery -->
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"
+        integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <script src="./js/script.js"></script>
 </head>
 
 <body>
@@ -71,6 +75,35 @@
                 </div>
             </div>
         </section>
+
+        <section id="products">
+            <h2>Products</h2>
+            <div>
+                <img src="./image/products/milkpng.png" alt="">
+                <img src="./image/products/peanut.jpeg" alt="">
+                <img src="./image/products/variety.png" alt="">
+                <img src="./image/products/pumpkin.png" alt="">
+                <img src="./image/products/brownie.png" alt="">
+                <img src="./image/products/crunch-cookie.png" alt="">
+            </div>
+            <p class="warning">
+                ***<span>Allergens:</span>
+                Contains Peanuts, Milk and Soy. May contain Tree Nuts. Contains bioengineered food ingredients.***
+            </p>
+        </section>
+
+        <section>
+            <div class="balloon hidden">
+                <h3>
+                    <span>One </span>for
+                    <span> All </span>&amp;
+                    <span> All </span>for
+                    <span> Fun!</span>
+                </h3>
+            </div>
+            <img src="./image/characters/all-line.png" alt="m&m's characters">
+        </section>
+
 
     </main>
 
