--- a/Project/index.html
+++ b/Project/index.html
@@ -9,16 +9,135 @@
     <!-- title -->
     <title>Astraea - Home</title>
     <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Jura:wght@300..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Russo+One&display=swap"
+        rel="stylesheet">
     <!-- css -->
     <link rel="stylesheet" href="./css/style.css">
+    <!-- add icons -->
+    <link rel="stylesheet" href="./fontawesome/css/all.min.css">
+    <!-- js/jQuery -->
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"
+        integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <script src="./js/script.js"></script>
 </head>
 
 <body>
     <header>
+        <div>
+            <!-- header logo -->
+            <a href="index.html" class="logo">
+                <img src="./image/logo-yellow.png" alt="logo">
+            </a>
+
+            <nav>
+                <menu>
+                    <li><a href="./index.html" class="active">Home</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="#">Products</a>
+                        <ul class="dropdown">
+                            <li><a href="./products/orzorz.html"><span>&gt;</span>Orzorz Star</a></li>
+                            <li><a href="./products/sega.html"><span>&gt;</span>SEGA Homestar</a></li>
+                            <li><a href="./products/fulen.html"><span>&gt;</span>FULEN Star</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </menu>
+                <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+            </nav>
+        </div>
     </header>
+    <section class="masthead">
+        <h1>The wonderful universe under any skies</h1>
+    </section>
     <main>
+        <!-- services section -->
+        <section class="services">
+            <h2>Services</h2>
+            <div>
+                <div class="service">
+                    <h3>Cafe</h3>
+                    <div>
+                        <i class="fa-solid fa-mug-hot sev-icon"></i>
+                        <i class="fas fa-arrow-right focus"></i>
+                        <span>See Menu</span>
+                    </div>
+                </div>
+                <div class="service">
+                    <h3>Shop</h3>
+                    <div>
+                        <i class="fa-solid fa-shop sev-icon"></i>
+                        <i class="fas fa-arrow-right focus"></i>
+                        <span>Visit Shop</span>
+                    </div>
+                </div>
+                <div class="service">
+                    <h3>Portable Planetarium</h3>
+                    <div>
+                        <i class="fas fa-igloo sev-icon"></i>
+                        <i class="fas fa-arrow-right focus"></i>
+                        <span>Book Now</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Cards -->
+        <section class="products">
+            <h2>Products</h2>
+            <div class="card-row">
+                <div>
+                    <div>
+                        <img src="./image/products/projector1.jpg"
+                            alt="product image:Orzorz Star Projector Galaxy Night Light">
+                    </div>
+                    <!-- title -->
+                    <h3>Orzorz Star Projector Galaxy Night Light</h3>
+                    <p>$99.00</p>
+                    <p><a href="">More detail <i class="fas fa-arrow-right"></i></a></p>
+                </div>
+                <div>
+                    <div>
+                        <img src="./image/products/projector2.jpg" alt="product image:SEGA Homestar">
+                    </div>
+                    <!-- title -->
+                    <h3>SEGA Homestar</h3>
+                    <p>$196.50</p>
+                    <p><a href="">More detail <i class="fas fa-arrow-right"></i></a></p>
+                </div>
+                <div>
+                    <div>
+                        <img src="./image/products/projector3.jpg"
+                            alt="product image:FULEN Star Projector Galaxy Night Light">
+                    </div>
+                    <!-- title -->
+                    <h3>FULEN Star Projector Galaxy Night Light</h3>
+                    <p>$25.00</p>
+                    <p><a href="">More detail <i class="fas fa-arrow-right"></i></a></p>
+                </div>
+            </div>
+        </section>
+
     </main>
+
+
+
     <footer>
+        <div>
+            <h3>Astraea</h3>
+            <p>2 Georgian Dr, Barrie, ON L4M 3X9</p>
+            <p>(012) 345-6789</p>
+            <p>info@placafe-astraea.com</p>
+            <div class="icons">
+                <ul>
+                    <li><a href="#"><i class="fa-brands fa-facebook fa-lg"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-square-twitter fa-lg"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-square-instagram fa-lg"></i></a></li>
+                </ul>
+            </div>
+        </div>
     </footer>
 </body>
 
