Add about and contact pages and adjusted home

--- a/Project/index.html
+++ b/Project/index.html
@@ -24,7 +24,7 @@
     <script src="./js/script.js"></script>
 </head>
 
-<body>
+<body class="home">
     <header>
         <div>
             <!-- header logo -->
@@ -70,7 +70,7 @@
                     <div>
                         <i class="fa-solid fa-shop sev-icon"></i>
                         <i class="fas fa-arrow-right focus"></i>
-                        <span>Visit Shop</span>
+                        <span>Check<br>Products</span>
                     </div>
                 </div>
                 <div class="service">
@@ -94,7 +94,7 @@
                             alt="product image:Orzorz Star Projector Galaxy Night Light">
                     </div>
                     <!-- title -->
-                    <h3>Orzorz Star Projector Galaxy Night Light</h3>
+                    <h4>Orzorz Star Projector Galaxy Night Light</h4>
                     <p>$99.00</p>
                     <p><a href="">More detail <i class="fas fa-arrow-right"></i></a></p>
                 </div>
@@ -103,7 +103,7 @@
                         <img src="./image/products/projector2.jpg" alt="product image:SEGA Homestar">
                     </div>
                     <!-- title -->
-                    <h3>SEGA Homestar</h3>
+                    <h4>SEGA Homestar</h4>
                     <p>$196.50</p>
                     <p><a href="">More detail <i class="fas fa-arrow-right"></i></a></p>
                 </div>
@@ -113,7 +113,7 @@
                             alt="product image:FULEN Star Projector Galaxy Night Light">
                     </div>
                     <!-- title -->
-                    <h3>FULEN Star Projector Galaxy Night Light</h3>
+                    <h4>FULEN Star Projector Galaxy Night Light</h4>
                     <p>$25.00</p>
                     <p><a href="">More detail <i class="fas fa-arrow-right"></i></a></p>
                 </div>
