Add products pages

--- a/Project/index.html
+++ b/Project/index.html
@@ -95,8 +95,8 @@
                     </div>
                     <!-- title -->
                     <h4>Orzorz Star Projector Galaxy Night Light</h4>
-                    <p>$99.00</p>
-                    <p><a href="">More detail <i class="fas fa-arrow-right"></i></a></p>
+                    <p>$99.99</p>
+                    <p><a href="./products/orzorz.html">More detail <i class="fas fa-arrow-right"></i></a></p>
                 </div>
                 <div>
                     <div>
@@ -105,7 +105,7 @@
                     <!-- title -->
                     <h4>SEGA Homestar</h4>
                     <p>$196.50</p>
-                    <p><a href="">More detail <i class="fas fa-arrow-right"></i></a></p>
+                    <p><a href="./products/sega.html">More detail <i class="fas fa-arrow-right"></i></a></p>
                 </div>
                 <div>
                     <div>
@@ -115,7 +115,7 @@
                     <!-- title -->
                     <h4>FULEN Star Projector Galaxy Night Light</h4>
                     <p>$25.00</p>
-                    <p><a href="">More detail <i class="fas fa-arrow-right"></i></a></p>
+                    <p><a href="./products/fulen.html">More detail <i class="fas fa-arrow-right"></i></a></p>
                 </div>
             </div>
         </section>
