--- a/Project/about.html
+++ b/Project/about.html
@@ -56,7 +56,7 @@
         <section class="about">
             <div>
                 <h2>Bringing space closer</h2>
-                <div>
+                <div class="fade-left">
                     <h4>Est 2021</h4>
                     <h3>Our Story</h3>
                     <p>We started our service in 2021 hoping to provide a place to feel and learn about the universe in
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div>
-                <img src="./image/about.png" alt="image of the cafe">
+                <img src="./image/about.png" class="fade-up" alt="image of the cafe">
             </div>
         </section>
     </main>
