--- a/Project/products/fulen.html
+++ b/Project/products/fulen.html
@@ -53,7 +53,7 @@
     </section>
     <main>
         <section class="product">
-            <div>
+            <div class="fade-up">
                 <h2>FULEN Star Projector Galaxy Night Light</h2>
                 <div class="feature">
                     <p class="price">$25.00</p>
@@ -82,7 +82,7 @@
                 <!-- <p></p> -->
                 <button type="button" class="add-btn">Add to Cart</button>
             </div>
-            <div>
+            <div class="fade-up">
                 <img src="../image/products/projector3.jpg" alt="image of the cafe">
             </div>
         </section>
