--- a/Project/products/orzorz.html
+++ b/Project/products/orzorz.html
@@ -53,7 +53,7 @@
     </section>
     <main>
         <section class="product">
-            <div>
+            <div class="fade-up">
                 <h2>Orzorz Star Projector Galaxy Night Light</h2>
                 <div class="feature">
                     <p class="price">$99.99</p>
@@ -80,7 +80,7 @@
                 <!-- <p></p> -->
                 <button type="button" class="add-btn">Add to Cart</button>
             </div>
-            <div>
+            <div class="fade-up">
                 <img src="../image/products/projector1.jpg" alt="image of the cafe">
             </div>
         </section>
