--- a/Project/products/sega.html
+++ b/Project/products/sega.html
@@ -53,7 +53,7 @@
     </section>
     <main>
         <section class="product">
-            <div>
+            <div class="fade-up">
                 <h2>SEGA Homestar</h2>
                 <div class="feature">
                     <p class="price">$196.50</p>
@@ -79,7 +79,7 @@
                 <!-- <p></p> -->
                 <button type="button" class="add-btn">Add to Cart</button>
             </div>
-            <div>
+            <div class="fade-up">
                 <img src="../image/products/projector2.jpg" alt="image of the cafe">
             </div>
         </section>
