Fixed path for home from products page

--- a/Project/products/fulen.html
+++ b/Project/products/fulen.html
@@ -28,7 +28,7 @@
     <header>
         <div>
             <!-- header logo -->
-            <a href="index.html" class="logo">
+            <a href="../index.html" class="logo">
                 <img src="../image/logo-yellow.png" alt="logo">
             </a>
             <nav>
