Fixed a console error

--- a/Project/index.html
+++ b/Project/index.html
@@ -24,7 +24,7 @@
     <script src="./js/script.js"></script>
 </head>
 
-<body class="home">
+<body id="home" class="home">
     <header>
         <div>
             <!-- header logo -->
