--- a/Project/index.html
+++ b/Project/index.html
@@ -26,7 +26,7 @@
 
 <body id="home" class="home">
     <header>
-        <div>
+        <div class="desktop-nav">
             <!-- header logo -->
             <a href="index.html" class="logo">
                 <img src="./image/logo-yellow.png" alt="logo">
@@ -46,6 +46,27 @@
                     <li><a href="./contact.html">Contact</a></li>
                 </menu>
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+            </nav>
+        </div>
+        <div class="mobile-nav">
+            <input id="burger" type="checkbox">
+            <label for="burger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+            <nav>
+                <div>
+                    <a href="index.html"><img src="./image/logo.png" alt="header logo"></a>
+                </div>
+                <menu>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./products/orzorz.html">Products(Orzorz Star)</a></li>
+                    <li><a href="./products/sega.html">Products(SEGA Homestar)</a></li>
+                    <li><a href="./products/fulen.html">Products(FULEN Star)</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </menu>
             </nav>
         </div>
     </header>
