--- a/Project/products/sega.html
+++ b/Project/products/sega.html
@@ -26,7 +26,7 @@
 
 <body id="products" class="subpage">
     <header>
-        <div>
+        <div class="desktop-nav">
             <!-- header logo -->
             <a href="../index.html" class="logo">
                 <img src="../image/logo-yellow.png" alt="logo">
@@ -47,6 +47,28 @@
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
             </nav>
         </div>
+        <div class="mobile-nav">
+            <input id="burger" type="checkbox">
+            <label for="burger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+            <nav>
+                <div>
+                    <a href="index.html"><img src="../image/logo.png" alt="header logo"></a>
+                </div>
+                <menu>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../about.html">About</a></li>
+                    <li><a href="./orzorz.html">Products(Orzorz Star)</a></li>
+                    <li><a href="./sega.html">Products(SEGA Homestar)</a></li>
+                    <li><a href="./fulen.html">Products(FULEN Star)</a></li>
+                    <li><a href="../contact.html">Contact</a></li>
+                </menu>
+            </nav>
+        </div>
+
     </header>
     <section class="masthead">
         <h1>Products</h1>
